<resources>

    <!-- TEMP Placeholders -->
    <string name="server_user_create">https://grabble-api.herokuapp.com/users</string>
    <string name="server_get_leaderboard">https://grabble-api.herokuapp.com/leaderboard</string>
    <string name="server_update_place">https://grabble-api.herokuapp.com/update_place</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to user this app.</string>
    <string name="location_permission_denied">This sample requires location permission. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Grabble\'.</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>
    <string name="title_activity_signup">Sign Up</string>

    <!-- Strings related to login -->
    <string name="prompt_nickname">Nickname</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="error_invalid_nickname">The nickname must contain from 4 to 20 alphanumeric characters and start with a letter.</string>
    <string name="error_cannot_connect_to_server">Error! Cannot connect to the server</string>
    <string name="error_nickname_already_exists">This nickname already exists</string>
    <string name="error_field_required">This field is required</string>

    <!-- String related to letter map XML parsing -->
    <string name="xml_file_format">kml</string>
    <string name="xml_placemark_key">Placemark</string>
    <string name="xml_placemark_name">name</string>
    <string name="xml_placemark_description">description</string>
    <string name="xml_placemark_point">Point</string>
    <string name="xml_placemark_point_coordinates">coordinates</string>

    <!-- Strings related to user JSON parsing -->
    <string name="json_user_key">user</string>
    <string name="json_user_id_key">id</string>
    <string name="json_user_nickname_key">nickname</string>
    <string name="json_user_auth_token_key">auth_token</string>
    <string name="json_user_score_key">score</string>
    <string name="json_user_place_key">place</string>
    <string name="json_user_created_at_key">created_at</string>

    <!-- Strings related to Toast outputs -->
    <string name="toast_too_many_letters">Oops! Too many letters. You only need 7</string>
    <string name="toast_not_enough_individual_letters">Oops! Seems you don\'t have enough</string>
    <string name="toast_not_enough_letters">Oops! Too few letters. You need 7 to submit</string>
    <string name="toast_successful_word_collection">Hooray! Collected a word:</string>
    <string name="toast_no_such_word">Oops! No such word on a dictionary</string>

    <!-- Strings related to user settings -->
    <string name="pref_user_nickname_key" translatable="false">nickname</string>
    <string name="pref_user_nickname_default" translatable="false">Grabbster9000</string>
    <string name="pref_user_auth_token_key" translatable="false">auth_token</string>
    <string name="pref_user_score_key" translatable="false">score</string>
    <string name="pref_user_place_key" translatable="false">place</string>
    <string name="pref_user_place_default" translatable="false">0</string>
    <string name="pref_user_created_at" translatable="false">created_at</string>
    <string name="pref_number_of_users_key" translatable="false">number_of_users</string>
    <string name="pref_number_of_users_default" translatable="false">0</string>

    <!-- Activities' titles -->
    <string name="title_activity_maps">Grabble</string>
    <string name="title_activity_user_info">User Information</string>
    <string name="title_activity_bag">Bag</string>
    <string name="title_activity_leaderboard">Leaderboard</string>

    <string name="bag_image_description">Bag Image</string>
    <string name="prompt_word">Collect a word</string>

    <!-- Strings related to app colors -->
    <string name="color_light_blue">#3498DB</string>

    <!-- Strings related to Leaderboard table -->
    <string name="column_header_place">#</string>
    <string name="column_header_nickname">Nickname</string>
    <string name="column_header_score">Score</string>

    <!-- Strings related to Words table -->
    <string name="column_header_word">Word</string>
    <string name="column_header_word_score">Score</string>
    <string name="column_header_count">Count</string>

    <!-- Achievements -->
    <string name="achievement_same_word">Collect same word twice</string>
    <string name="achievement_100_words">Collect 100 words</string>
    <string name="achievement_word_score_over_70">Collect a word with 70+ score</string>

    <string name="achievement_first">Become best player</string>
    <string name="achievement_top_10">Reach best players Top 10</string>

    <string name="achievement_alphabet">Collect all alphabet</string>
    <string name="achievement_night">Collect 20 letters at night</string>

    <string name="achievement_christmas">Collect a word on Christmas</string>
    <string name="achievement_easter">Collect a word on Easter</string>

    <string name="achievement_letter_near_starbucks">Collect letter near Starbucks</string>
    <string name="achievement_letter_near_forrest_hill">Collect letter near Forrest Hill</string>
    <string name="achievement_letter_near_appleton_tower">Collect letter near Appleton Tower</string>
    <string name="achievement_letter_near_lidl">Collect letter near Lidl</string>
    <string name="achievement_letter_near_library">Collect letter near Main Library</string>
    <string name="achievement_letter_near_teviot">Collect letter near Teviot Row House</string>

    <string name="achievement_student">Collect STUDENT</string>
    <string name="achievement_weekend">Collect WEEKEND</string>
    <string name="achievement_holiday">Collect HOLIDAY</string>



    <!-- Others -->
    <string name="app_name">Grabble</string>
    <string name="date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="column_count">count</string>
    <string name="dictionary_filename">dictionary.txt</string>
    <string name="action_submit">Submit</string>

</resources>
