<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/words_image" />

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        style="@style/UserStatsInfo">

        <TableRow>
            <TextView
                android:text="@string/column_header_word"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_weight=".7"
                />
            <TextView
                android:text="@string/column_header_word_score"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_weight=".2"
                android:gravity="end"
                />
            <TextView
                android:text="@string/column_header_count"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:layout_weight=".1"
                android:gravity="end"
                />
        </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/words"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/UserStatsInfo">
    </ListView>

</LinearLayout>