<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_bag"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grabble.android.mantas.BagActivity">

    <ImageView
        android:id="@+id/bagImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/bag_image_description"
        android:src="@drawable/bag_image_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:gravity="center">
        <EditText
            android:id="@+id/collect_word"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:hint="@string/prompt_word"
            android:inputType="textVisiblePassword|textNoSuggestions" />
        <ImageButton
            android:id="@+id/delete_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/delete"/>
    </LinearLayout>

    <Button
        android:id="@+id/submit_word"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#3498DB"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:text="@string/action_submit"
        android:layout_gravity="center"/>

    <GridView
        android:id="@+id/letters"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/UserStatsInfo"
        android:numColumns="4"
        android:orientation="vertical">
    </GridView>
</LinearLayout>
