<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_leaderboard"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grabble.android.mantas.BagActivity">

    <ImageView
        android:id="@+id/bagImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/leaderboard_image_large" />

    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        style="@style/UserStatsInfo">

        <TableRow>
            <TextView
                android:text="@string/column_header_place"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingEnd="30dp"
                android:paddingStart="10dp"
                android:textStyle="bold"
                />
            <TextView
                android:text="@string/column_header_nickname"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textStyle="bold"
                />
            <TextView
                android:text="@string/column_header_score"
                android:gravity="end"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textStyle="bold"
                />
        </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/leaderboard"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/UserStatsInfo" >
    </ListView>

</LinearLayout>
